# e-commerce_recommender

./: .gitignore  README.md  configuration.yaml  dummy.py  pyproject.toml
.github/workflows/: build.yaml  build.yml  develop_build.yaml  main_build.yaml  master_build.yaml  normal_check.yaml
data/: tiny_recommendations.pkl  tiny_test.csv  tiny_train.csv
docker/: Dockerfile
docs/source/: conf.py  example.rst  index.rst  install.rst
e_commerce/: __main__.py  api_web.py  config.py  load_data_helper.py  model_helper.py  recommender.py
model/: freq-matrix-50
tests/: test_main.py
