[tool.poetry]
name = "e-commerce"
version = "1.0.33"
description = "Final project for the MLOps course"
authors = ["Juan Sebastián Ramírez Artiles <juanseraar@hotmail.com>"]
readme = "README.md"
packages = [{include = "e_commerce"}]
include = ["configuration.yaml"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
pyarrow = "^10.0.1"
scikit-learn = "^1.1.3"
pyyaml = "^6.0"
fastapi = "^0.88.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.11.1"}
uvicorn = "^0.20.0"
boto3 = {extras = ["crt"], version = "^1.26.26"}


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.10.0"
pylint = "^2.15.8"
sphinx = "^5.3.0"
pytest = "^7.2.0"
pre-commit = "^2.20.0"
coverage = "^6.5.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"